Tech Work, Peace Fixes and such

--- a/localisation/PB_Technologies_l_english.yml
+++ b/localisation/PB_Technologies_l_english.yml
@@ -88,3 +88,30 @@
 
  wmd_livewire:0 "Livewire Deployment"
  PB_Livewire_Available_tt:0 "£Generic_Skull §RLivewire can now be deployed§!"
+
+ special_forces_power_armor:0 "Hardsuit Pilots"
+ special_forces_power_armor_desc:0 "Hardsuits were developed near the end of the Great War as a natural evolution of Automat development. Though bulky, these suits allowed the pilot to survive extreme environments and survive kinetic attacks that would decimate conventional troops. A consequence of their use, however, is the need to train and provide therapies to pilots.\n\nThe human brain was simply not designed to handle a second skin, and without proper training and therapy, the suits can be just as dangerous to their user as they are to the enemy. To remedy this, pilots must undergo various surgeries and genetic enhancements to prepare their mind and body to interface with the Hardsuit and truly use it as a heavily militarized second skin."
+ power_armor_archetype:0 "Hardsuits"
+ power_armor_archetype_desc:0 "Developed near the end of the Great War, Hardsuits are a mix of the complex and rudimentary. While on surface level, they're simply big metal suits with guns, the process of piloting these suits is difficult. The human mind has trouble managing having two bodies, and thus pilots must be given expensive and lengthy therapies to prepare them physically and mentally for combat. These therapy kits are absolutely essential for the deployment of Hardsuit divisions."
+ power_armor_0:0 "Hardsuits"
+ power_armor_0_desc:0 "Hardsuits were developed near the end of the Great War as a natural evolution of Automat development. Though bulky, these suits allowed the pilot to survive extreme environments and survive kinetic attacks that would decimate conventional troops. A consequence of their use, however, is the need to train and provide therapies to pilots. The human brain was simply not designed to handle a second skin, and without proper training and therapy, the suits can be just as dangerous to their user as they are to the enemy."
+
+ special_forces_razor_girls:0 "Razormaidens"
+ special_forces_razor_girls_desc:0 "Throughout history, women have rarely occupied combat roles. The advent of human augmentation following the Great War changed this paradigm. While never seeing wartime service, the interwar saw many gearheads experiment on themselves, chasing the perpetually unachievable high of being faster, stronger and deadlier.\n\nThis practice lead to the development of Razormaidens, a unique class of special operations units largely composed of heavily augmented women. Every appendage is augmented, turning these units into incredibly fast killing machines, in some instances literally armed to the teeth.\n\nThough unconventional, they outperform standard troops in sheer speed, but the fickle nature of augmentation relegates them to special forces detachments."
+ razor_girl_archetype:0 "Razormaiden S.T.C"
+ razor_girl_0:0 "Razormaidens"
+ razor_girl_0_desc:0 "While never seeing wartime service, the interwar saw many gearheads experiment on themselves, chasing the perpetually unachievable high of being faster, stronger and deadlier. This practice lead to the development of Razormaidens, a unique class of special operations units largely composed of heavily augmented women. Every appendage is augmented, turning these units into incredibly fast killing machines, in some instances literally armed to the teeth."
+
+ special_forces_power_armor_upgrade:0 "Improved Assault Servos"
+ special_forces_power_armor_upgrade2:0 "Expanded Visual Sensors"
+ special_forces_power_armor_upgrade3:0 "Automated Health Assessments"
+ special_forces_power_armor_upgrade4:0 "Improved Radio Transmitters"
+ special_forces_power_armor_upgrade5:0 "Air Conditioning Sensors"
+ special_forces_power_armor_upgrade6:0 "Kinetic-Resistant Formed Armor"
+
+ special_forces_razor_girls1:0 "Combat Infiltrator Module"
+ special_forces_razor_girls2:0 "Rusalka Protocols"
+ special_forces_razor_girls3:0 "Full Body Weaponization"
+ special_forces_razor_girls4:0 "Chameleonic Gene Splicing"
+ special_forces_razor_girls5:0 "Modular Bodily Construction"
+ special_forces_razor_girls6:0 "Bio-Tech Evolutionary Synthesis"
