--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -1207,6 +1207,7 @@
   PB_FRA_Underground_Factories:0 "Underground Factories"
   PB_FRA_Underground_Factories_desc:0 "We must account for the fact that rival powers may surpass France in the battle for the heavens. If so then our industry will become vunerable to aerial bombardment. Constructing underground factories will address half the issue, the other half being how do we retake the skies."
   PB_FRA_Promissory_Notes:0 "Promissory Notes"
+  PB_FRA_Promissory_Notes_desc:0 "Expanding our military industry has come with great financial costs, to ease the burden on our economic sector we shall establish a promissory-system with France's top military contractors to ensure a steady supply of funds. "
   PB_FRA_Blood_Sweat_And_Patriotism:0 "Blood Sweat And Patriotism"
   PB_FRA_Military_Contracts:0 "Military Contracts"
   PB_FRA_State_Owned_Weapon_Manufacturers:0 "State Owned Weapon Manufacturers"
