More Russian Stuff

--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -212,6 +212,9 @@
   PB_RUS_revenge_for_the_fallen_desc:0 ""
   PB_RUS_Hunting_The_Black_Hundreds:0 "Hunting The Black Hundreds"
   PB_RUS_Russia_United:0 "Russia United"
+  PB_RUS_Bloated_Military:0 "Bloated Military"
+  PB_RUS_An_Army_With_A_State:0 "An Army With A State"
+  PB_RUS_An_Army_With_A_State_2:0 "An Army With A State"
 
   ##########################
   # EVENTS
@@ -233,6 +236,14 @@
   Russian.4.d:0 ""
   Russian.4.a:0 "Hope Dies Today"
 
+  Russian.5.t:0 "I Spy Heresy"
+  Russian.5.d:0 ""
+  Russian.5.a:0 "Thats One Tough Bastard"
+
+  Russian.6.t:0 "Wrangel's Coup"
+  Russian.6.d:0 ""
+  Russian.6.a:0 "How Unsurprising"
+
   ##########################
   # GUI DESCRIPTIONS
   ##########################
@@ -242,30 +253,59 @@
   ##########################  
 
   PB_RUS_The_Doctors_Report:0 "The Doctor's Report"
+  PB_RUS_The_Doctors_Report_desc:0 "The Tsar's days are numbered, this is no secret, quite the opposite in fact; the Russian public has known for weeks about Nicholas' ailing health. It is because of this that the Russian political situation can be considered a mess, all the ideological fringes have mounted against the imperial state in a plight to destroy the Romanov name. The monarchy balances on a thin piece of rope, held between the upper and lower classes and at any moment it could snap. Years of abuse, struggle, and silence have come to a boiling point."
   PB_RUS_The_Duma_Crisis:0 "The Duma Crisis"
+  PB_RUS_The_Duma_Crisis_desc:0 ""
   PB_RUS_An_Empire_In_Desperation:0 "An Empire In Desperation"
+  PB_RUS_An_Empire_In_Desperation_desc:0 ""
   PB_RUS_Alexandra:0 "Alexandra"
+  PB_RUS_Alexandra_desc:0 ""
   PB_RUS_Total_Control:0 "Total Control"
+  PB_RUS_Total_Control_desc:0 ""
   PB_RUS_Military_Supervision:0 "Military Supervision"
+  PB_RUS_Military_Supervision_desc:0 ""
   PB_RUS_Social_Reforms:0 "Social Reforms"
+  PB_RUS_Social_Reforms_desc:0 ""
   PB_RUS_Tea_Time_With_Rasputin:0 "Tea Time With Rasputin"
+  PB_RUS_Tea_Time_With_Rasputin_desc:0 ""
   PB_RUS_Improve_The_Welfare_System:0 "Improve The Welfare System"
+  PB_RUS_Improve_The_Welfare_System_desc:0 ""
   PB_RUS_Crackdown_On_Extremism:0 "Crackdown On Extremism"
+  PB_RUS_Crackdown_On_Extremism_desc:0 ""
   PB_RUS_Appeal_To_The_Workers:0 "Appeal To The Workers"
+  PB_RUS_Appeal_To_The_Workers_desc:0 ""
   PB_RUS_Unity_Festivals:0 "Unity Festivals"
+  PB_RUS_Unity_Festivals_desc:0 ""
   PB_RUS_Rigged_Promotions:0 "Rigged Promotions"
+  PB_RUS_Rigged_Promotions_desc:0 ""
   PB_RUS_Mobolize_The_Cliques:0 "Mobolize The Cliques"
+  PB_RUS_Mobolize_The_Cliques_desc:0 ""
   PB_RUS_Increase_Military_Funding:0 "Increase Military Funding"
+  PB_RUS_Increase_Military_Funding_desc:0 ""
   PB_RUS_Greater_Autonomy:0 "Greater Autonomy"
+  PB_RUS_Greater_Autonomy_desc:0 ""
   PB_RUS_Assassinate_The_Charlatan:0 "Assassinate The Charlatan"
+  PB_RUS_Assassinate_The_Charlatan_desc:0 ""
   PB_RUS_An_Army_With_A_State:0 "An Army With A State"
+  PB_RUS_An_Army_With_A_State_desc:0 ""
   PB_RUS_The_Officer_Putsch:0 "The Officer Putsch"
+  PB_RUS_The_Officer_Putsch_desc:0 ""
   PB_RUS_Holy_Russia_United:0 "Holy Russia United"
+  PB_RUS_Holy_Russia_United_desc:0 ""
   PB_RUS_Kirill:0 "Kirill"
+  PB_RUS_Kirill_desc:0 ""
+  PB_RUS_Alexei:0 "Alexei"
+  PB_RUS_Alexei_desc:0 ""
 
   ########################## 
   # Decisions
   ##########################
+
+  ########################## 
+  # FLAGS
+  ##########################
+
+  Tsar_Is_Fucking_Dead_LOL:0 "The Tsar Is Dead"
   
   ########################## 
   # TOOLTIPS
@@ -275,8 +315,25 @@
   PB_RUS_Crackdown_On_Extremism_tt:0 "              \n"
   PB_RUS_Holy_Russia_United_tt:0 "Ethnic Cohesion Minimum Value §G+10§!"
   PB_RUS_Military_Supervision_tt:0 "\n§gThe Tsarina will be little more than a puppet queen, her actions and words mean nothing. Russia is under new management.§! "
+  PB_RUS_Rigged_Promotions_tt:0 "Political Dissonance Maximum Value §G-10§!"
+  Minimum_Military_Satisfaction_tt:0 "Minimum Military Satisfaction Value §G+10§!"
+  PB_RUS_Assassinate_The_Charlatan_tt:0 "§YGrigori Rasputin§! dies"
 
   #######################
-  # SCRIPTED LOC
+  # PARTIES
   #######################
+
+  RUS_Military_Gov_long:0 "Vserossiyskiy Ofitserskiy Komitet"
+  RUS_Military_Gov:0 "VOK"
+
+  #######################
+  # COSMETIC TAGS
+  #######################
+
+  RUS_Military_Government:0 "Russian Confederation"
+  RUS_Military_Government_Puppet_BAL:0 "Baltic Governate"
+  RUS_Military_Government_Puppet_POL:0 "Congress Poland"
+  RUS_Military_Government_Puppet_FIN:0 "Russian Military Administration In Finland"
+  RUS_Military_Government_Puppet_TRS:0 "Caucasus Viceroyalty"
+  RUS_Military_Government_Puppet_ASK:0 "Novorossiya"
   
