Big German Load Incoming
- Focus Changes
- Ideas
- Localisation
- Decision
- events
- gfx for focus and events
- state work

--- a/localisation/PB_Germany_l_english.yml
+++ b/localisation/PB_Germany_l_english.yml
@@ -119,7 +119,9 @@
 
   PB_GER_Relief_Packages:0 "Relief Packages"
   PB_GER_Construction_Forts:0 "Festung Germanien"
+  PB_GER_Construction_Forts_Heart:0 "Das Land der Deutschen"
   PB_GER_More_Rations:0 "War Rationing Plan"
+  PB_GER_Kiel_German_Unrest:0 "The German Independence Movement"
 
   PB_GER_Rhineland_Unrest_Critical:0 "High Unrest in the Rhineland"
   PB_GER_Rhineland_Unrest_Moderate:0 "Moderate Unrest in the Rhineland"
@@ -206,7 +208,7 @@
   PB_GER_Protect_Jewish_Institutions:0 "Protecting the Rights of Women and Jews"
   PB_GER_negotiate:0 "Negotiating with the German States"
   PB_GER_technological_advance:0 "Technology Our Speciality"
-  PB_GER_ready_the_economy:0 "Preparing the Economy for War"
+  PB_GER_ready_the_economy:0 "\nPreparing the Economy for War"
   PB_GER_no_time_heroes:0 "Times of Comfort are Over"
   PB_GER_moral_standards:0 "Propaganda for Moral Standards"
   PB_GER_attacking_extremists:0 "Rooting out the Extremists"
@@ -444,9 +446,9 @@
 
   PB_GER_Black_Diplomacy:0 "Our New Destiny"
   PB_GER_Demands_Danish:0 "Threatening the Danish"
-  PB_GER_Demands_Danish_desc:0 "Threatening the Danish"
+  PB_GER_Demands_Danish_desc:0 "The Danish Government has gone too far. The brutal crackdown of the Germanic Movement in Kiel was inhuman and completely unnecessary. Despite there being one or three radicals, like in every movement, the movement and its supporters very largely peaceful and worked together with the Democratic Mechanisms. The Danish have demonstrated that they are not able to govern German People with their recent escalation. The United Kingdoms of Germany has come to the conclusion that the agreements with the Danish and Kiel Governments are not in effect anymore and they have lost their right to rule the region of Holstein. We demand that the region of Holstein becomes a part of the Volksstaat of Hannover."
   PB_GER_Warning_Swiss:0 "Warning the Swiss"
-  PB_GER_Warning_Swiss_desc:0 "Warning the Swiss"
+  PB_GER_Warning_Swiss_desc:0 "It appears that Switzerland might be secretly helping the French and Russians. Apperantly several bank accounts are being created in Switzerland where French officials are stashing amounts of state gold. Furthermore we received that in Geneva, French Supporting Organizations start collecting funds and assemble volunteers. With France's Expansion Worldview it is very naive from the Swiss Officials to simply ignore these threats and try to benefit from them. We have to send a strong warning that what they are doing is not good for their wellbeing and especially ours. They should rather help our efforts."
   PB_GER_Look_Balkans:0 "Look to the Balkans"
   PB_GER_Look_Balkans_desc:0 "Look to the Balkans"
   PB_GER_reinforcing_grip_over_europe:0 "Reinforcing Our Grip over Europe"
@@ -711,7 +713,7 @@
   germany.54.a:0 "It's all collapsing now."
 
   germany.55.t:0 "Elections Scheduled"
-  germany.55.d:0 ""
+  germany.55.d:0 "With the fall of the Government, new elections have been scheduled so that the people can decide a new government. In approximately one months the elections will be held through the United Kingdoms of Germany.\n\nWe thought that with Victory in the Great War our Nation's Golden Age would finally beginn. However nothing like this truly happened. In the last decade the nation has experienced a long economic depression resulting in large parts of the population being dragged down suddenly into poverty. Our relations with our old allies have stagnated, Britian turned their focus on their colonies and Russia began sudjugating their own people and increasingly see us as a rival. Our vision for a peacefuly Europe where cooperation and unity could shine broke down almost immediatly due to uncaring and self-centered politicians. In truth the last years have been nothing then stagnation.\n\nThe German people want change. They want to bring back Germany back to Greatness. May it be exploiting the true potential of this nations industry, the reestablishment of an European Alliance, the normalization of political stabilityo or to have a nation capable to be ready to defend its nation against the growing dark clouds of Europe."
   germany.55.a:0 "The people have to decide the fate of the Nation."
 
   germany.56.t:0 "The Socialists Reorganize"
@@ -743,6 +745,49 @@
   germany.70.t:0 "A Response to Mister Hugenberg's Remarks Regarding the Jewish People"
   germany.70.d:0 "Slogans and anti-semetic slander filled the halls of the German government as the Chancellor stood his place at the podium. Rathenau waited patiently for these voices of discontent to stay silent, his gaze searched through the Reichstag before falling upon Hungenberg for a brief moment. And then, the Chancellor began his response:\n\n“Honourable and noble members of this Diet, you have heard very...colourful terms used in response to one of our most recent pieces of legislation, talk of spies and conspiracy amongst the Jewish population of our nation, especially from the right honourable Hugenberg. But I come to you requesting a chance to speak and offer my perspective on our nation’s actions. And fortunately I have been granted an opportunity to do so.\n\nMany of those who do not approve of the actions of our government claim that Jews are traitors, thieves, with more than a few of them disputing their very humanity, along with their citizenship and the status of this land as their home. You call us traitors and cowards, but ignore our sacrifices during the war. Hundreds if not thousands of Jews volunteered, giving life and limb for Germany. You claim we have taken our money, while it is Jewish businesses contribute to our economy. And you say that Germany is not our land, that there is no greater honour than driving us out. But we have lived here for centuries, long before any of you were born. Even in the days of the Holy Roman Empire, my people were here, we have earned our place in Germany.\n\nYou claim that such beliefs and practices are noble, but where is the honour in driving away honest hard working people who sacrificed everything for a country that brates them! That does everything they can to fix our ailing economy, just as any other German would! All while you ignore the storm clouds forming over Europe, the Revanchism of France grows as it eyes to absorb our territory. If you truly cared for Germany, you would see the real threat rather than chasing make believe boogeymen who only exist in your imagination! Bring us together, instead of dividing us apart.”\n\nThe ministers and politicians cheered, waving the flags of Germany, celebrating this speech as a victory in itself. Over the tide of anti-semitism, as Rathenau looked out to the crowd, he could see the quiet fury of Hungenberg, he knew this would be an uphill battle. But this was a start."
   germany.70.a:0 "Germans! Here we stand!"
+
+  germany.120.t:0 "Movement on the German Border"
+  germany.120.d:0 "We have received several reports from the border that suspiscouc army movements have been seen on the other side of the German Border.\nIt seems like the Reactionary Governemnt in Germany intends to challenge our Republic. We must be ready for the coming storm."
+  germany.120.a:0 "Ready the Army."
+
+  germany.121.t:0 "Ultimatum from Germany"
+  germany.121.d:0 "The German Ambassador has delivered an ultimatum from the German Government to us.\nThe ultimatum states that we have to reduce our army size and restrict it's modernization. Furthermore they demand that we sign a non-aggression pact with them and guarentee the sovereignty of Serbia and Romania. If we fullfill these terms the United Kingdoms of Germany will see our nation as a friend and guarentee our independence.\nOur politcians and people are outraged. The Germans demand our hard fought independence to be thrown away again and want to see us in the dust again. However some people are afraid of the consequences of another war and advise that it is in the best interests of the Republic to accept these terms."
+  germany.121.a:0 "We rather die then become lapdogs again"
+  germany.121.b:0 "Our Republic can not survive another war"
+
+  germany.122.t:0 "The Danubian Confederation rejects our Demands"
+  germany.122.d:0 "It seems like that the Danubian Confederation is not able to accept any basic demands.\n\nThe German Government give approval to the Army to carry out it's operation. Operation Grünkuss will be carried out and aim to overthrow the Jacobin government and restore order to the regions of the Danube from Croatia to Translyvania."
+  germany.122.a:0 "Cross the Border"
+
+  germany.123.t:0 "The Danubian Confederation accepts our Demands"
+  germany.123.d:0 "Quite suprisingly the Danubian Confederation has accepted our ultimatum.\n\nDespite great backlash in Budapest the Danubian Governement decides to accept the terms and safeguard their independence. The German Government is somewhat relieved as this will hopefully boost Germany's International Standing and their approval by the people.\nAt first the Army was also disappointed but is now fine with the situation as they can fully focus on France and Russia without worries of a new front opening up."
+  germany.123.a:0 "Who said that we could not be friends?"
+
+  germany.124.t:0 "Germany proposes Economic Treaty"
+  germany.124.d:0 ""
+  germany.124.a:0 "We can not reject this offer."
+
+  germany.125.t:0 "Movement on the German Border"
+  germany.125.d:0 "We have received several reports from the border that suspiscouc army movements have been seen on the other side of the German Border.\nIt seems like the Reactionary Governemnt in Germany intends to challenge our Empire. We must be ready for the coming storm."
+  germany.125.a:0 "Ready the Army."
+
+  germany.126.t:0 "Ultimatum from Germany"
+  germany.126.d:0 "The German Ambassador has delivered an ultimatum from the German Government to us.\nThe ultimatum states that we have to reduce our army size and restrict it's modernization. Furthermore they demand that we sign a non-aggression pact with them and guarentee the sovereignty of Hungary and Greece. If we fullfill these terms the United Kingdoms of Germany will see our nation as a friend and guarentee our independence.\nOur politcians and people are outraged. The Germans demand that we proud Slavs shall bow to their will and dishonor all what is important to us. However some people are afraid of the consequences of another war and advise that it is in the best interests of the Empire to accept these terms."
+  germany.126.a:0 "German Dogs"
+  germany.126.b:0 "We will not risk the Empire for Russia."
+
+  germany.127.t:0 "The Empire of Yugoslavia rejects our Demands"
+  germany.127.d:0 "It seems like that the Empire of Yugoslavia is not able to accept any basic demands.\n\nThe German Government has given approval to the Army to carry out it's operation. Operation Schlangenbiss will be carried out and aim to occupy the Slavic Lands and restore the Crotian and Bulgarian Nations."
+  germany.127.a:0 "Cross the Border"
+  
+  germany.128.t:0 "The Empire of Yugoslavia accepts our Demands"
+  germany.128.d:0 "Quite suprisingly the Empire of Yugoslavia has accepted our ultimatum.\n\nDespite great backlash in Belgrade the Yugoslavian Monarchy decides to accept the terms and safeguard their independence. The German Government is somewhat relieved as this will hopefully boost Germany's International Standing and their approval by the people.\nAt first the Army was also disappointed but is now fine with the situation as they can fully focus on France and Russia without worries of a new front opening up."
+  germany.128.a:0 "A suprising development"
+
+  germany.129.t:0 "Germany proposes Economic Treaty"
+  germany.129.d:0 ""
+  germany.129.a:0 "We can not reject this offer."
+
 
 
   ##########################
@@ -780,6 +825,25 @@
   PB_Private_Interests_of_arms_companies:0 "Ignore the Private Interests of Arms Companies"
   PB_Reestablish_the_War_Raw_Material_Dep:0 "Reestablish the “Raw War Materials Department“"
   PB_Maximising_War_Production:0 "Maximising Wartime Production"
+
+
+  PB_GER_Europe_Diplomacy:0 "Germany and Europe"
+  PB_GER_Europe_Diplomacy_desc:0 "\n\n\n\n\n\nWe are not alone. Despite being cornered on two sides by two Great Powers there are several nations of Europe who resist the Extremists Imperial Hawks and help us fight them.\n\nHowever there are also other nations who sympathise with them or take the oppurtunity of war to backstabb us.\n\nWe have to be ready for everything that might happen."
+  PB_Invading_Danubia:0 "[HUN.GetFlag]Ultimatum to Danubia"
+  PB_Invading_Danubia_desc:0 "The Danubian Confederation has been a thorn in our sides especially since their victory in the Balkan War. They have emerged as second-rate Great Power and could potentially attack us if we go to war with France and Russia. The General Staff considers Hungary to be too great of a threat and suggests that before a Second Great War we should enforce our control over them with every possible means necassary."
+  PB_GER_rec_war_hun:0 "§RThe Danubian Confederation will receive an ultimatum. They will be forced to agree to reduce their army size and put restrictions on it's build up, agree to sign non-aggression pacts with us and our allies, guarantee to respect Romanian and Serbian Independence and receive themself a guarantee, from us, against aggression from France or Russia.\n\nIt is highly likely that they will accept that the Ultimatum so Invasion Plans of the Hungarian Plains should be drafted up in preparation.§!"
+  PB_Approach_Defeated_Hungary:0 "A Treaty with [HUN.GetFlag]Hungary"
+  PB_Approach_Defeated_Hungary_desc:0 "Hungary does not have the power or will to fight in another war, however despite this they can still be beneficial for our cause. We can promise to ease the burdens of Hungary from their losses and reperations caused by the war with economic cooperation. This would be the first step of reestablishing friendly relations with Hungary and hopefully securing them as an ally in the future."
+  PB_GER_treaty_def_hun:0 "§GHungary will very likely always accept the treaty as they direly need to renew their industry and national influence.\nThrough this treaty, the costs Hungarian Resources will be greatly reduced for us to buy.§!"
+  PB_Invading_Yugoslavia:0 "[SER.GetFlag]Ultimatum to Yugoslavia"
+  PB_Invading_Yugoslavia_desc:0 "The Empire of Yugoslavia has emerged from the Great Balkan War. While the fall of the Hungarian Republic was great news, the emergence of the new Slavic Empire causes severe issues for our national security. Yugoslavia, dominiated by the Serbs who always had very close relations with Russia, could become a potential ally of the Russian Empire. Incase of war with Russia this would mean another front on our southern border. Government and Army insist to put pressure on this issue and resolve it with every means necassary.s"
+  PB_GER_rec_war_ser:0 "§RThe Yugoslavian Empire will receive an ultimatum. They will be forced to agree to reduce their army size and put restrictions on it's build up, agree to sign non-aggression pacts with us and our allies, guarantee to respect Hungarian and Greek Independence and receive themself a guarantee, from us, against aggression from France or Russia.\n\nIt is highly likely that they will accept that the Ultimatum so Invasion Plans of the Slavic Nation should be drafted up in preparation.§!"
+  PB_Approach_Defeated_Romania:0 "A Treaty with [ROM.GetFlag]Romania"
+  PB_Approach_Defeated_Romania_desc:0 "Romania does not have the power or will to fight in another war, however despite this they can still be beneficial for our cause, especially their oil deposits. We can promise to ease the burdens of Hungary from their losses and reperations caused by the war with economic cooperation. This would be the first step of reestablishing friendly relations with Romania and hopefully securing them as an ally in the future."
+  PB_GER_treaty_def_rom:0 "§GRomania will very likely always accept the treaty as they direly need to renew their industry and national influence.\nThrough this treaty, the costs Romanian Resources will be greatly reduced for us to buy.§!"
+  PB_Cause_Instability_Danish_Holstein:0 "Causing Instablity in [SCH.GetFlag]Schleswig-Holstein"
+  PB_GER_holstein_instability:0 "The Governement in Holstein and Copenhagen will experience a rise of German Independence Movements in the next few weeks. With a high chance the Danish Government might respond poorly to these movements and increase their support. When the movement has become too big §Rwe will intervene in the affairs of the Danish State on the behalf of the German Speaking People.§!"
+  
 
   ##########################
   # KINGDOMS MECHANIC
@@ -968,6 +1032,8 @@
   employment_act_tt:0 "Has completed Decision §Y"The Universal Minimum Employment Act"§!"
 
   GER_Unlock_Emergency_Directives:0 "£decision_icon_small Unlocks §YDecisions§! to activate Emergency Directives to gain the right to change laws in Wartime."
+
+  PB_GER_Kiel_Unrest:0 "§RThe Violence in Kiel has escalated.§!"
   
   GER_Milita_Spawning:0 "Several §YMilitia Battalions will be formed§! in the Major Cities to Safeguard their Defences against Enemy Breakthroughs or Paratrooper Attacks"
 
@@ -984,6 +1050,8 @@
   GER_tt_rathenau_total_raw_material_plan:0 "§YIn War the Country needs to use all resources it can get. All of them. Bring us your silver tellers, your steel hoe or your aluminium made pot. The war industry can not cut any corners!§!\n\nThe Next Phase of Total War gains \nResource Penalty on Production §G-10%§!\nStability §R-2.5%§!"
 
   GER_tt_rathenau_total_raw_maximising_production:0 "§YIn America and Great Britian their armament companies approved high effieceny programs to maximise production at all times. Those programs have seen great results and fit perfectly into our Total War System if we want to adopt them aswell.§!\n\nThe Next Phase of Total War gains \nFactory Output §G+5%§!\nStability §R-5%§!"
+
+  GER_Unlock_Europe_Diplomatic_Decisions_Reactionary:0 "§YUnlocks§! £decision_icon_small Decisions to start our involvement in the Balkan Countries"
 
   ##########################
   # COSMETIC TAGS
