--- a/localisation/PB_Hungary_l_english.yml
+++ b/localisation/PB_Hungary_l_english.yml
@@ -25,6 +25,16 @@
 
   PB_HUN_Ethnic_Tensions:0 "Ethnic Tensions"
   PB_HUN_Ethnic_Tensions_desc:0 "It feels like the Republic is threatened by all sides even from the inside. In recent years the Non-Hungarian Groups in the Republic have become more and more unruly. Enemy Spies are catched stirring up Anti-Hungarian Propaganda, weapons are smuggled over the borders and the children do not sing the anthem properly anymore. Especially in Slovakia the situation is growing out of control. It seems like the Magyarization Policies towards the Slovaks might dangerously backfire."
+
+  PB_HUN_German_Disarmament:0 "German Imposed Disarmament"
+  PB_HUN_German_Disarmament_desc:0 "Our Republic has agreed to accept the terms of the German Ultimatum and disarmed it's army. This has greatly destroyed the support and stability of the Republic."
+  #temporary here until we have serbian locals
+  PB_SER_German_Disarmament:0 "German Imposed Disarmament"
+  PB_SER_German_Disarmament_desc:0 "Our Empire has agreed to accept the terms of the German Ultimatum and disarmed it's army. This has greatly destroyed the support and stability of the Empire."
+
+  PB_HUN_German_Eco_Treaty:0 "German Economic Treaty"
+  #temporary here until we have serbian locals
+  PB_ROM_German_Eco_Treaty:0 "German Economic Treaty"
   
   ##########
   #Decisions
