MORE RUSSIA WORK

--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -215,6 +215,8 @@
   PB_RUS_Bloated_Military:0 "Bloated Military"
   PB_RUS_An_Army_With_A_State:0 "An Army With A State"
   PB_RUS_An_Army_With_A_State_2:0 "An Army With A State"
+  PB_RUS_aftermath_of_the_nationalist_revolts_2:0 "Broken Dreams"
+  PB_RUS_BH_Military_Integration:0 "BH-Military Integration"
 
   ##########################
   # EVENTS
@@ -243,6 +245,10 @@
   Russian.6.t:0 "Wrangel's Coup"
   Russian.6.d:0 ""
   Russian.6.a:0 "How Unsurprising"
+
+  Russian.7.t:0 "My Eyes Have Seen The Lord"
+  Russian.7.d:0 ""
+  Russian.7.a:0 "There's No Turning Back Now"
 
   ##########################
   # GUI DESCRIPTIONS
@@ -314,6 +320,22 @@
   PB_RUS_Reinstitute_Slavery:0 "Reinstitute Slavery"
   PB_RUS_Reinstitute_Slavery_desc:0 ""
   PB_RUS_Rape_Pillage_And_Conquer:0 "Rape, Pillage, And Conquer"
+  PB_RUS_Rape_Pillage_And_Conquer_desc:0 ""
+  PB_RUS_Reassure_The_Officers:0 "Reassure The Officers"
+  PB_RUS_Reassure_The_Officers_desc:0 ""
+  PB_RUS_Redefine_Monarchism:0 "Redefine Monarchism"
+  PB_RUS_Redefine_Monarchism_desc:0 "" 
+  PB_RUS_Hunt_The_Weak:0 "Hunt The Weak"
+  PB_RUS_Hunt_The_Weak_desc:0 ""
+  PB_RUS_Loyalty_Can_Be_Brought:0 "Loyalty Can Be Brought"
+  PB_RUS_Loyalty_Can_Be_Brought_desc:0 ""
+  PB_RUS_Maintain_The_Social_Hierachy:0 "Maintain The Social Hierachy"
+  PB_RUS_Maintain_The_Social_Hierachy_desc:0 ""
+  PB_RUS_Ensure_Polititcal_Stability:0 "Ensure Polititcal Stability"
+  PB_RUS_Ensure_Polititcal_Stability_desc:0 ""
+  PB_RUS_Imperialism_Born_Anew:0 "Imperialism Born Anew"
+  PB_RUS_Imperialism_Born_Anew_desc:0 ""
+
 
   ########################## 
   # Decisions
@@ -329,13 +351,15 @@
   # TOOLTIPS
   ##########################
 
-  PB_RUS_Total_Control_tt:0 "\n§gTsarina Alexandra will bring freedom and prosperity to the Eurasian realm, Russia will grow under a new golden age.§! "
+  PB_RUS_Total_Control_tt:0 "\n§gTsarina Alexandra will bring freedom and prosperity to the Eurasian realm, Russia will grow under a new golden age.§!"
   PB_RUS_Crackdown_On_Extremism_tt:0 "              \n"
   PB_RUS_Holy_Russia_United_tt:0 "Ethnic Cohesion Minimum Value §G+10§!"
-  PB_RUS_Military_Supervision_tt:0 "\n§gThe Tsarina will be little more than a puppet queen, her actions and words mean nothing. Russia is under new management.§! "
+  PB_RUS_Military_Supervision_tt:0 "\n§gThe Tsarina will be little more than a puppet queen, her actions and words mean nothing. Russia is under new management.§!"
   PB_RUS_Rigged_Promotions_tt:0 "Political Dissonance Maximum Value §G-10§!"
   Minimum_Military_Satisfaction_tt:0 "Minimum Military Satisfaction Value §G+10§!"
   PB_RUS_Assassinate_The_Charlatan_tt:0 "§YGrigori Rasputin§! dies"
+  PB_RUS_Barbarians_Of_Russia_tt:0 "\n§gAlexei and the Black Hundreds will torment Russia's very soul, warping it into a nightmarish state ruled with an iron grip.§!\n\n§RIt Is Highly Recommended You Don't Play This Path§!"
+  PB_RUS_BH_Military_Integration_tt:0 "Ethnic Cohesion Maximum Value §R-10§!"
 
   #######################
   # PARTIES
