Russia Puppet Stuff

--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -216,6 +216,8 @@
   PB_RUS_An_Army_With_A_State:0 "An Army With A State"
   PB_RUS_An_Army_With_A_State_2:0 "An Army With A State"
   PB_RUS_aftermath_of_the_nationalist_revolts_2:0 "Broken Dreams"
+  PB_RUS_aftermath_of_the_nationalist_revolts_3:0 "Broken Dreams"
+  PB_RUS_aftermath_of_the_nationalist_revolts_4:0 "Rape, Pillage, And Conquer"
   PB_RUS_BH_Military_Integration:0 "BH-Military Integration"
 
   ##########################
@@ -249,6 +251,22 @@
   Russian.7.t:0 "My Eyes Have Seen The Lord"
   Russian.7.d:0 ""
   Russian.7.a:0 "There's No Turning Back Now"
+
+  Russian.8.t:0 "To End Thought"
+  Russian.8.d:0 ""
+  Russian.8.a:0 "Its Impossible, Right?"
+
+  Russian.9.t:0 "Is It Too Late?"
+  Russian.9.d:0 ""
+  Russian.9.a:0 "It Is"
+
+  Russian.10.t:0 "A Monday Morning"
+  Russian.10.d:0 ""
+  Russian.10.a:0 "Change Has Finally Come"
+
+  Russian.11.t:0 "Father, Im Terrified"
+  Russian.11.d:0 ""
+  Russian.11.a:0 "You Will Do Well Son"
 
   ##########################
   # GUI DESCRIPTIONS
