--- a/localisation/PB_RussianAutonomies_l_english.yml
+++ b/localisation/PB_RussianAutonomies_l_english.yml
@@ -17,25 +17,9 @@
   # IDEAS
   ##########################
 
-PB_BAL_denikin_playground:0 "Denikin's Playground"
-PB_BAL_denikin_playground_desc:0 ""
-PB_BAL_denikin_playground_2:0 "Denikin's Dominion"
-PB_BAL_denikin_playground_2_desc:0 ""
-PB_BAL_denikin_playground_3:0 "Denikin's Shackles"
-PB_BAL_denikin_playground_3_desc:0 ""
-PB_ASK_wealthy_prison_colony:0 "The Wealthy Prison Colony"
-PB_ASK_wealthy_prison_colony_desc:0 ""
-PB_ASK_growing_colony:0 "The Growing Colony"
-PB_ASK_growing_colony_desc:0 ""
-PB_TRS_growing_heresy:0 "The Growing Heresy"
-PB_TRS_growing_heresy_desc:0 ""
-PB_TRS_growing_heresy_2:0 "Heretical Crackdown"
-PB_TRS_growing_heresy_2_desc:0 ""
-PB_TRS_growing_heresy_3:0 "Heretical Explosion"
-PB_TRS_growing_heresy_3_desc:0 ""
-PB_FIN_weak_military_control:0 "Weak Military Control Over Finland"
-PB_FIN_weak_military_control_desc:0 ""
-PB_FIN_weak_military_control_2:0 "Military Control Strengthened"
-PB_FIN_weak_military_control_2_desc:0 ""
-PB_KRD_russian_economic_control:0 "Russian Economic Control"
-PB_KRD_russian_economic_control_desc:0 ""
+  PB_BAL_Denikin_Playground:0 "Denikin's Playground"
+  PB_BAL_Denikin_Playground_desc:0 ""
+  PB_FIN_Winter_War:0 "The Winter War"
+  PB_FIN_Winter_War_desc:0 "The Finnish revolt of 1931 has been a thorn in Russia's administrative efforts in controlling the region, officially governed by the Russian Empire in reality the northern regions are effectively under the command of rag-tag Finnish seperatists. That and their continued support from Scandanavian nations, namely Sweden, has pro-longed this 'winter' guerilla campaign longer than expected. Tank combat is rendered effectively useless because of Finlands terrain with Russian tactics now boiling down to 'send as many men as we can' to drive the Free Finnish Army out. With already 5,000 Russian deaths compared to a measly 300 Finnish deaths the demands for peace become louder in Moscow."
+  PB_FIN_Scandinavian_Support:0 "Scandinavian Support"
+  PB_FIN_Scandinavian_Support_desc:0 "The military support the Free Finnish Army recieves from Sweden is vital to their secessionist cause. In fact almost all Finnish weapons are of Swedish origin with only a hand full of weapons being produced locally, if funding was to be some how cut then Finland as a concept would die within a heart beat. Sweden and the rest of Scandanavia provide Finland with military know-how in the form of secret attaches, of course the Scandanavian nations are mostly sending military proffesionals in the hopes of improving their own army, and not out of the goodness of their hearts. Although all can agree it would be better if Russia wasn't knocking on their doorstep."
